# rlc

./: .clang-format  .clang-tidy  .gitignore  .pylintrc  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  CPackConfig.cmake  LICENSE.TXT  README.md  bootstrap_llvm.sh  build.py  dbg_env.sh  environment.bat  environment.fish  environment.sh  fish_dbg_env.fish  macros.cmake  merge_benchs.sh  packetize.py  plot.py  requirements.txt  rlcConfig.cmake.in  run-requirements.txt  setup-no-debug.sh  setup.py  setup.sh
lib/ast/: CMakeLists.txt  utilsConfig.cmake
lib/ast/include/rlc/ast/: ActionDeclaration.hpp  ActionDefinition.hpp  ArgumentDeclaration.hpp  ArrayAccess.hpp  BuiltinEntities.hpp  BuiltinFunctions.hpp  Call.hpp  (+14 more)
lib/ast/src/: ActionDeclaration.cpp  ActionDefinition.cpp  ArgumentDeclaration.cpp  ArrayAccess.cpp  BuiltinEntities.cpp  BuiltinFunctions.cpp  Call.cpp  Constant.cpp  Entity.cpp  EntityDeclaration.cpp  Expression.cpp  FunctionDeclaration.cpp  FunctionDefinition.cpp  MemberAccess.cpp  Statement.cpp  SymbolTable.cpp  System.cpp  Type.cpp  TypeUse.cpp
lib/ast/test/: CMakeLists.txt
lib/ast/test/src/: ASTTest.cpp  ConstantTest.cpp  EntityTest.cpp  ExpressionTest.cpp  StatementTest.cpp
lib/backend/: CMakeLists.txt  backendConfig.cmake
lib/backend/src/: BackEnd.cpp
lib/dialect/: CMakeLists.txt
lib/dialect/src/: ActionArgumentAnalysis.cpp  ActionLiveness.cpp  ActionStatementsToCoro.cpp  AddOutOfBoundsCheckPass.cpp  AddPreconditionsCheckPass.cpp  ArgumentAnalysisPass.cpp  Attrs.cpp  Attrs.td  Constraints.cpp  ConstraintsAnalysis.cpp  ConstraintsTestPass.cpp  Conversion.cpp  DebugInfo.cpp  Dialect.cpp  Dialect.td  DynamicArgumentAnalysisPass.cpp  EmitEnumEntitiesPass.cpp  EmitFuzzTargetPass.cpp  EmitImplicitAssignPass.cpp  EmitImplicitDestructorInvocationsPass.cpp  EmitImplicitInitPass.cpp  EmitMain.cpp  Enums.cpp  Enums.td  ExtractPreconditionPass.cpp  FixMacOSManglingPass.cpp  HoistAllocaPass.cpp  InstantiateTemplatesPass.cpp  Interfaces.cpp  Interfaces.td  LowerActionPass.cpp  LowerArrayCalls.cpp  LowerAssertsPass.cpp  LowerAssignPass.cpp  LowerConstructOpPass.cpp  LowerForFieldOpPass.cpp  LowerForLoopsPass.cpp  LowerInitializerListsPass.cpp  LowerIsOperationsPass.cpp  LowerSubActionStatements.cpp  (+22 more)
lib/dialect/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
lib/dialect/test/filecheck/: entity-declaration.ll  entity-to-global.ll
lib/dialect/test/src/: DialectTest.cpp
lib/runtime/: CMakeLists.txt  runtimeConfig.cmake
lib/runtime/src/: Parse.c  Runtime.c  fuzz_target.c
lib/runtime/test/: CMakeLists.txt
lib/runtime/test/src/: Parse.cpp
tool/rlc/test/: CMakeLists.txt  DefaultInitializedOwningPtr.rl  GlobalConstant.rl  GlobalIntInType.rl  OneSubAction.rl  ReturnReference.rl  SameNameActions.rl  StringSerializationInStruct.rl  UsingType.rl  action.rl  action_leak.rl  action_trait.rl  addition_associates_left.rl  alias_type_used_in_structs.rl  all_actions_O2.rl  all_actions_alternative_type.rl  alloca_entity.rl  alterantive.rl  alterantive_in_alternative.rl  alternative_actions.rl  alternative_actions_print.rl  alternative_serialization.rl  alternative_subaction.rl  alternative_to_string.rl  array_access.rl  array_access_reference.rl  array_deduction.rl  array_test.rl  assign.rl  assign_integer.rl  bint_overload_resolution.rl  bit_and.rl  bit_not.rl  bit_or.rl  bit_xor.rl  bool_array_literal.rl  bounded_arg_test.rl  bounded_byte.rl  bounded_vector_tensor_serialization.rl  break_test.rl  (+182 more)
tool/rlc/test/constraint/: 1.rl  CA_1.rl  CA_10.rl  CA_11.rl  CA_12.rl  CA_13.rl  CA_2.rl  CA_3.rl  CA_4.rl  CA_5.rl  CA_6.rl  CA_7.rl  CA_8.rl  CA_9.rl  easy_1.rl  easy_2.rl  easy_3.rl  hard_1.rl  hard_2.rl  hard_3.rl  hard_4.rl  medium_1.rl  medium_2.rl  medium_3.rl  medium_4.rl  medium_5.rl  medium_6.rl  medium_7.rl
tool/rlc/test/crashes/: CMakeLists.txt  array_overflow.rl  array_underflow.rl  illegal_argument.rl  should_crash.cpp  unexpected_subaction.rl
tool/rlc/test/examples/: 2players_texas_holdem.rl  alternate_turns.rl  battleship.rl  black_jack.rl  catch.rl  checkers.rl  connect_four.rl  hanabi.rl  loop_alloca.rl  sequence.rl  simplest_example.rl  sky_tower.rl  stock_dump.rl  sudoku.rl
tool/rlc/test/messages/: action_in_if.rl  action_in_itself.rl  action_statement_in_function.rl  actions_with_different_args.rl  assert_crash.rl  assign_wrong_type.rl  assign_wrong_type_struct.rl  assign_wrong_type_struct_struct.rl  assign_wrong_type_struct_template.rl  assign_wrong_type_struct_union.rl  call_to_void_function.rl  continue_without_loop.rl  double_trait_definition.rl  empty_field_name.rl  empty_initializer_list.rl  error.rl  frm_in_fun_decl.rl  incorrect_byte_conversion.rl  invalid_frame_var.rl  missing_final_return.rl  missing_function.rl  missing_return.rl  missing_var_in_action.rl  missing_variable.rl  missmatched_argument_count.rl  multiple_same_name_actions.rl  no_action_recursion_allowed.rl  no_know_type_named.rl  non_int_array_access.rl  not_enough_template_arguments.rl  private_function_access.rl  private_member_access.rl  return_in_void_function.rl  subactions_nonactions.rl  tensorable_warnings.rl  too_many_template_types_error.rl  wrong_action_return_type.rl  wrong_ref_return_type.rl  wrong_type.rl
tool/rlc/test/tutorial/: 2.rl  3.rl  START_HERE.rl
tool/rlc/test/wrappers/: action_with_frame_vars.rl  c_function.rl  call_function.rl  callpython.rl  complex_call.rl  csharp_action.rl  csharp_alias.rl  csharp_call.rl  csharp_custom_functions.rl  csharp_enums.rl  csharp_struct_decl.rl  csharp_union.rl  csharp_vector.rl  custom_abort.rl  godot_wrapper.rl  new_c_action.rl  new_c_alias.rl  new_c_alternetive_type.rl  new_c_arrays.rl  new_c_custom_functions.rl  new_c_enums.rl  new_c_function.rl  new_c_struct_decl.rl  new_c_vector.rl  python_enum.rl  python_primitive_types.rl  python_templates.rl  return_array_wrapper.rl  ruby_action.rl  ruby_class.rl  ruby_function.rl  ruby_inspect.rl  ruby_string.rl  ruby_string_extra.rl  ruby_tic_tac_toe.rl  ruby_unions.rl  ruby_unions_accessor.rl  ruby_vectorl.rl  test_trace_runner.rl  wrap_rlc_object_into_ctypes_pointer.rl
(+358 files in other folders)
